# wii-disc-info-rs

./: Cargo.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
