[package]
name = "wii-disc-info"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mq1/wii-disc-info"
homepage = "https://github.com/mq1/wii-disc-info"
description = "Query info about wii disc files (without requiring Seek)"

[features]
default = []
cli = ["dep:lexopt"]

[dependencies]
lexopt = { version = "0.3", optional = true }

[lints.rust]
rust_2018_idioms = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
