[package]
name = "wii-disc-info"
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
authors = ["Manuel Quarneti <mq1@ik.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mq1/wii-disc-info-rs"
homepage = "https://github.com/mq1/wii-disc-info-rs"
description = "Query info about wii disc files (without requiring Seek)"

[features]
default = []
cli = ["dep:lexopt"]

[dependencies]
arrayvec = "0.7"
derive_more = { version = "2.1", features = ["display"] }
lexopt = { version = "0.3", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
